// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with target blank  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://themarker.com"
      onClick={null}
      target="_blank"
    >
      The Marker
    </a>
  </div>,
  "styles": "",
}
`;

exports[`Link within paragraph component  1`] = `
Object {
  "component": <div>
    <a
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k htz-l htz-m htz-n"
      href="http://www.iflscience.com/physics/new-type-of-bizarre-quantum-material-discovered/"
      onClick={null}
      target="_blank"
    >
      <span>
        New Type Of 
        <strong
          className="htz-o"
        >
          Bizarre Quantum Material
        </strong>
         Discovered.
      </span>
    </a>
  </div>,
  "styles": ".htz-a{color:#0B7EB5}.htz-b:visited{color:#0B7EB5}.htz-c:hover{color:#0B7EB5}.htz-d:hover{border-bottom-color:#0B7EB5}.htz-e:hover{border-bottom-width:1px}.htz-f:hover{border-bottom-style:solid}.htz-g:focus{color:#0B7EB5}.htz-h:focus{border-bottom-color:#0B7EB5}.htz-i:focus{border-bottom-width:1px}.htz-j:focus{border-bottom-style:solid}.htz-k:active{color:#0B7EB5}.htz-l:active{border-bottom-color:#0B7EB5}.htz-m:active{border-bottom-width:2px}.htz-n:active{border-bottom-style:solid}.htz-o{font-weight:700}",
}
`;

exports[`Simple link  1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      Haaretz
    </a>
  </div>,
  "styles": "",
}
`;

exports[`override "children" with content 1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      Haaretz
    </a>
  </div>,
  "styles": "",
}
`;

exports[`render content from "children" 1`] = `
Object {
  "component": <div>
    <a
      className={null}
      href="https://www.haaretz.co.il"
      onClick={null}
    >
      test content
    </a>
  </div>,
  "styles": "",
}
`;
